syntax = "proto3";

package cinema;
option go_package="./cinema";

message FilmListRequest {
  int32 type = 1;
  int32 cate = 2;
  int32 page = 3;
  int32 limit = 4;
}

message FilmListInfo {
  int32 film_id = 1;
  int32 type = 2;
  string film_name = 3;
  string cover_pic = 4;
}

message FilmListResponse {
  repeated FilmListInfo data  = 1;
  int32 count = 2;
  int32 page = 3;
  int32 limit = 4;
}

message FilmDatailRequest{
  int32 film_id = 1;
}

message FilmDetailInfo {
  int32 film_id = 1;
  int32 cate = 2;
  string film_name = 3;
  string cover_pic = 4;
  string film_desc = 5;
}

message FilmDetailResponse{
  FilmDetailInfo data = 1;
}

service Cinema {
  //影片列表
  rpc List(FilmListRequest) returns(FilmListResponse);
  //影片详情
  rpc Detail(FilmDatailRequest) returns(FilmDetailResponse);
}
